refactor(hello-java): cleanup unused code, fix busy-waiting, use virtual threads
- Remove dead classes: MemoryPoolManager, ChunkManager, FileManager, StreamIdGenerator
- Inline logic into UploadManager, DownloadManager
- Remove unused methods from ErrorHandler, UploadManager, DownloadManager
- Replace Thread.sleep with TimeUnit API, add exponential backoff in retry loops
- Use virtual threads for shutdown hooks and statistics scheduler
- Switch to unbounded queues in WebSocketClient to prevent message loss
- Add Linux JAVA_HOME auto-detection in shell scripts